# Neo

./: .env.example  .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  CLI_ENHANCED.md  DESIGN.md  DEVLOG.md  NEO_ENHANCED.md  QUICKSTART.md  README.md  future_enhancements.md  pyproject.toml  requirements-dev.txt  requirements.txt
neo/: __init__.py  __main__.py  agent.py  cli.py  config.py  logger.py  vscode_bridge.py
neo/agents/: __init__.py  base.py  code_review.py  explore.py  general.py  orchestrator.py  plan.py
neo/llm/: __init__.py  client.py  mock.py
neo/memory/: __init__.py  code_indexer.py  context_retriever.py  project.py  session.py  vector.py
neo/tools/: __init__.py  base.py  code.py  file.py  git.py  registry.py  search.py  shell.py  system.py
neo/tui/: __init__.py  app.py  widgets.py
neo/utils/: __init__.py  diff.py  path.py  transaction.py
